k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: py-wallet
  namespace: py-wallet-dev
  labels:
    app.kubernetes.io/name: py-wallet
    app.kubernetes.io/part-of: py-wallet
    app.kubernetes.io/environment: dev
spec:
  type: ClusterIP
  selector:
    app: py-wallet
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
