k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: py-wallet
  namespace: py-wallet-dev
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - py-wallet.45-132-75-118.sslip.io
      secretName: py-wallet-tls
  rules:
    - host: py-wallet.45-132-75-118.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: py-wallet
                port:
                  number: 80
